== Upgrade Notice ==
* Attachments are now processed in the order they were attached.
* XSS detection only issues a warning now

== CHANGELOG ==

= 1.4.8 (future) =
* placeholder 

= 1.4.7 (2012.12.07) =
* Fixed bug in cron setup that was preventing Weekly, twice an hour and every ten minute schedules from running.

= 1.4.6 (2012.12.06) =
* Changed XSS check to only emit warning until a better solution can be developed
* Fixed bug where authorized addresses were being checked with case sensitive rather than insensitive.
* Started using PHP Simple HTML DOM Parser http://simplehtmldom.sourceforge.net/
* Started process of logging all error messages to the log as well as the page (where appropriate)
* Fixed bug where "Preferred Text Type" was not displaying the saved value in settings page.
* Fixed bug where Postie was wiping out all other cron schedules.
* Fixed a number of missing internationalization strings (no translations added however)
* Added documentation for the comments: command
* Added feature to specify a custom post type in the subject line. Thanks to Raam Dev http://raamdev.com for his code.
* Removed a number of deprecated WordPress functions.
* Fixed numerous warning messages
* Added phpUnit tests
* Allow wp-config.php to be in alternate location as described here: http://codex.wordpress.org/Hardening_WordPress#Securing_wp-config.php
* Fix a bug that didn't replace the #img# tags correctly.

= 1.4.5 (2012.11.14) =
* Fixed bug in XSS attack vulnerability code. Thanks to R Reid http://blog.strictly-software.com/2012/03/fixing-postie-plugin-for-wordpress-to.html
* Fixed bug where emails with multiple categories has the incorrect title
* Fixed bugs where PHP setting were not being changed correctly - thanks to Peter Chester http://tri.be/author/peter/
* New maintainer

= 1.4.4 (2012.08.10) =
* Fixed possible XSS attack vulnerability 

= 1.4.3 =
* Removed get_user_by function to make compatible with wp 3.3 - now requires
 2.8+

= 1.4.2 (2011.01.29) =