@@ -5,7 +5,9 @@
 == CHANGELOG ==
 
 = 1.4.8 (future) =
-* placeholder 
+* fix collisions with simple_html_dom
+* fix bug when trying to get file name from MIME part
+* fix bug causing Cannot modify header information warning 
 
 = 1.4.7 (2012.12.07) =
 * Fixed bug in cron setup that was preventing Weekly, twice an hour and every ten minute schedules from running.
